# runpy

./: .env.example  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/instructions/: claude.instructions.md
.github/workflows/: pre-release.yml  release.yml
docs/: instalation.md
examples/playground/: .gitignore  Cargo.toml
examples/playground/src/: main.rs
examples/playground/worker/: pyproject.toml
examples/playground/worker/src/bases/: HelloWorker.py
examples/playground/worker/src/scripts/: another_script.py  hello.py  my_script.py
examples/template/: .gitignore  Cargo.toml
examples/template/src/: main.rs
examples/template/worker/: pyproject.toml
examples/template/worker/src/base/: worker.py
examples/template/worker/src/scripts/: my_script.py
manager/: Cargo.toml
manager/src/: integrity.rs  lib.rs  main.rs  manager.rs  protocol.rs  scribbler.rs  watchdog.rs
manager/tests/: manager_test.rs  unit.rs
manager/tests/unit/: integrity_test.rs  manager_test.rs  protocol_test.rs  scribbler_test.rs  watchdog_test.rs
py-worker/: pyproject.toml
py-worker/src/bridge/: base_worker.py
py-worker/src/scripts/: test.py
sockets/: .gitkeep
worker/: .envrc  .gitignore  README.md  pyproject.toml
worker/src/: __init__.py
worker/src/bridge/: worker.py
worker/src/runpyrs/: __init__.py  runScript.py  utils.py  worker.py
worker/src/scripts/: test.py
worker/tests/: test_runpyrs.py
