[package]
name = "runpy"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4"
rand = "0.8"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"

[lib]
name = "runpy"
path = "src/lib.rs"