[project]
name = "runpyrs"
version = "0.0.4"
description = "Python worker SDK for the Runpy manager — build workers that are spawned and orchestrated by Rust."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "dark1zinn" },
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# This maps the parent file to a local name inside the .tar.gz
force-include = { "../LICENSE" = "LICENSE" }

[tool.hatch.build.targets.wheel]
# This ensures it also ends up in the .whl (the installed version)
force-include = { "../LICENSE" = "LICENSE" }

[dependency-groups]
dev = [
    "uv>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/dark1zinn/runpy"
Repository = "https://github.com/dark1zinn/runpy"
