[project]
name = "runpyrs"
version = "0.1.0"
description = "Python worker SDK for the Runpy manager — build workers that are spawned and orchestrated by Rust."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "dark1zinn" },
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/runpyrs"]
# This ensures it also ends up in the built distributions.
include = ["../LICENSE"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "uv>=0.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/dark1zinn/runpy"
Repository = "https://github.com/dark1zinn/runpy"
