[project]
name = "playground_worker"
version = "0.1.0"
dependencies = [
    "runpyrs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
packages = ["src"]

[tool.uv.sources]
runpyrs = { path = "../../../worker", editable = true }

[dependency-groups]
dev = [
    "uv>=0.11.2",
]
